--- a/Modelo (em andamento).ipynb
+++ b/Modelo (em andamento).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -700,17 +700,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Achando o R0:"
+    "Achando o R0:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -722,7 +720,7 @@
        "(S, E, Ia, Is, R, D, a, ba, bs, ca, cs, p, q)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,11 +731,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#calcular força da infeção da doença aqui\n",
     "dsdt = -(bs * Is + ba * Ia) * S\n",
     "dedt = (bs * Is + ba * Ia) * S - a * E\n",
     "diadt = p * a * E - ca * Ia\n",
@@ -747,17 +744,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Equilibrios:"
+    "Equilibrios"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +764,7 @@
        "[[S == r1, E == 0, Ia == 0, Is == 0, R == r2, D == r3]]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -780,16 +775,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<html><script type=\"math/tex; mode=display\">\\newcommand{\\Bold}[1]{\\mathbf{#1}}\\left(\\begin{array}{rrrrrr}\n",
+       "-\\mathit{Ia} \\mathit{ba} - \\mathit{Is} \\mathit{bs} & 0 & -S \\mathit{ba} & -S \\mathit{bs} & 0 & 0 \\\\\n",
+       "\\mathit{Ia} \\mathit{ba} + \\mathit{Is} \\mathit{bs} & -a & S \\mathit{ba} & S \\mathit{bs} & 0 & 0 \\\\\n",
+       "0 & a p & -\\mathit{ca} & 0 & 0 & 0 \\\\\n",
+       "0 & -a {\\left(p - 1\\right)} & 0 & -\\mathit{cs} & 0 & 0 \\\\\n",
+       "0 & 0 & \\mathit{ca} & \\mathit{cs} q & 0 & 0 \\\\\n",
+       "0 & 0 & 0 & -\\mathit{cs} {\\left(q - 1\\right)} & 0 & 0\n",
+       "\\end{array}\\right)</script></html>"
+      ],
+      "text/plain": [
+       "[-Ia*ba - Is*bs              0          -S*ba          -S*bs              0              0]\n",
+       "[ Ia*ba + Is*bs             -a           S*ba           S*bs              0              0]\n",
+       "[             0            a*p            -ca              0              0              0]\n",
+       "[             0     -a*(p - 1)              0            -cs              0              0]\n",
+       "[             0              0             ca           cs*q              0              0]\n",
+       "[             0              0              0    -cs*(q - 1)              0              0]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "jack = jacobian([dsdt, dedt, diadt, disdt, drdt, dddt],[S, E , Ia, Is, R, D])"
+    "jack = jacobian([dsdt, dedt, diadt, disdt, drdt, dddt],[S, E , Ia, Is, R, D])\n",
+    "jack"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -801,7 +823,7 @@
        "x^6 + (Ia*ba + Is*bs + a + ca + cs)*x^5 + (-S*a*ba*p + S*a*bs*p + Ia*a*ba + Is*a*bs - S*a*bs + Ia*ba*ca + Is*bs*ca + Ia*ba*cs + Is*bs*cs + a*ca + a*cs + ca*cs)*x^4 + (S*a*bs*ca*p - S*a*ba*cs*p + Ia*a*ba*ca + Is*a*bs*ca - S*a*bs*ca + Ia*a*ba*cs + Is*a*bs*cs + Ia*ba*ca*cs + Is*bs*ca*cs + a*ca*cs)*x^3 + (Ia*a*ba*ca*cs + Is*a*bs*ca*cs)*x^2"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -809,6 +831,314 @@
    "source": [
     "cp = jack.characteristic_polynomial()\n",
     "cp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cálculo do $R_0$ analítico:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<html><script type=\"math/tex; mode=display\">\\newcommand{\\Bold}[1]{\\mathbf{#1}}\\left(\\begin{array}{r}\n",
+       "-{\\left(\\mathit{Ia} \\mathit{ba} + \\mathit{Is} \\mathit{bs}\\right)} S \\\\\n",
+       "0 \\\\\n",
+       "0\n",
+       "\\end{array}\\right)</script></html>"
+      ],
+      "text/plain": [
+       "[-(Ia*ba + Is*bs)*S]\n",
+       "[                 0]\n",
+       "[                 0]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "F_cal = matrix([[-(bs * Is + ba * Ia) * S],[0],[0]])\n",
+    "F_cal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<html><script type=\"math/tex; mode=display\">\\newcommand{\\Bold}[1]{\\mathbf{#1}}\\left(\\begin{array}{r}\n",
+       "E {\\left(\\mathit{ba} + \\mathit{bs}\\right)} \\\\\n",
+       "\\mathit{Is} a \\\\\n",
+       "\\mathit{Ia} a\n",
+       "\\end{array}\\right)</script></html>"
+      ],
+      "text/plain": [
+       "[E*(ba + bs)]\n",
+       "[       Is*a]\n",
+       "[       Ia*a]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "V_cal_neg = matrix([[(bs+ba)*E],[a*Is],[a*Ia]])\n",
+    "V_cal_neg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<html><script type=\"math/tex; mode=display\">\\newcommand{\\Bold}[1]{\\mathbf{#1}}\\left(\\begin{array}{r}\n",
+       "0 \\\\\n",
+       "-E {\\left(\\mathit{ba} + \\mathit{bs}\\right)} {\\left(p - 1\\right)} \\\\\n",
+       "E {\\left(\\mathit{ba} + \\mathit{bs}\\right)} p\n",
+       "\\end{array}\\right)</script></html>"
+      ],
+      "text/plain": [
+       "[                   0]\n",
+       "[-E*(ba + bs)*(p - 1)]\n",
+       "[       E*(ba + bs)*p]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "V_cal_pos = matrix([[0],[(1-p)*(bs+ba)*E],[p*(bs+ba)*E]])\n",
+    "V_cal_pos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<html><script type=\"math/tex; mode=display\">\\newcommand{\\Bold}[1]{\\mathbf{#1}}\\left(\\begin{array}{r}\n",
+       "E {\\left(\\mathit{ba} + \\mathit{bs}\\right)} \\\\\n",
+       "E {\\left(\\mathit{ba} + \\mathit{bs}\\right)} {\\left(p - 1\\right)} + \\mathit{Is} a \\\\\n",
+       "-E {\\left(\\mathit{ba} + \\mathit{bs}\\right)} p + \\mathit{Ia} a\n",
+       "\\end{array}\\right)</script></html>"
+      ],
+      "text/plain": [
+       "[               E*(ba + bs)]\n",
+       "[E*(ba + bs)*(p - 1) + Is*a]\n",
+       "[     -E*(ba + bs)*p + Ia*a]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "V_cal = V_cal_neg-V_cal_pos\n",
+    "V_cal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<html><script type=\"math/tex; mode=display\">\\newcommand{\\Bold}[1]{\\mathbf{#1}}\\left(\\begin{array}{rrr}\n",
+       "0 & -\\mathit{bs} & -\\mathit{ba} \\\\\n",
+       "0 & 0 & 0 \\\\\n",
+       "0 & 0 & 0\n",
+       "\\end{array}\\right)</script></html>"
+      ],
+      "text/plain": [
+       "[  0 -bs -ba]\n",
+       "[  0   0   0]\n",
+       "[  0   0   0]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "F = jacobian(F_cal(S=1),[E,Is,Ia])\n",
+    "F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<html><script type=\"math/tex; mode=display\">\\newcommand{\\Bold}[1]{\\mathbf{#1}}\\left(\\begin{array}{rrr}\n",
+       "\\mathit{ba} + \\mathit{bs} & 0 & 0 \\\\\n",
+       "{\\left(\\mathit{ba} + \\mathit{bs}\\right)} {\\left(p - 1\\right)} & a & 0 \\\\\n",
+       "-{\\left(\\mathit{ba} + \\mathit{bs}\\right)} p & 0 & a\n",
+       "\\end{array}\\right)</script></html>"
+      ],
+      "text/plain": [
+       "[          ba + bs                 0                 0]\n",
+       "[(ba + bs)*(p - 1)                 a                 0]\n",
+       "[     -(ba + bs)*p                 0                 a]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "V = jacobian(V_cal(S=1),[E,Is,Ia])\n",
+    "V"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$R_0 = p(FV^{-1})$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "M = F*V.inverse()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<html><script type=\"math/tex; mode=display\">\\newcommand{\\Bold}[1]{\\mathbf{#1}}\\left(\\begin{array}{rrr}\n",
+       "-\\frac{{\\left(\\mathit{ba} - \\mathit{bs}\\right)} p + \\mathit{bs}}{a} & -\\frac{\\mathit{bs}}{a} & -\\frac{\\mathit{ba}}{a} \\\\\n",
+       "0 & 0 & 0 \\\\\n",
+       "0 & 0 & 0\n",
+       "\\end{array}\\right)</script></html>"
+      ],
+      "text/plain": [
+       "[-((ba - bs)*p + bs)/a                 -bs/a                 -ba/a]\n",
+       "[                    0                     0                     0]\n",
+       "[                    0                     0                     0]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M=M.simplify_full()\n",
+    "M"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<html><script type=\"math/tex; mode=display\">\\newcommand{\\Bold}[1]{\\mathbf{#1}}\\left[-\\frac{{\\left(\\mathit{ba} - \\mathit{bs}\\right)} p + \\mathit{bs}}{a}, 0, 0\\right]</script></html>"
+      ],
+      "text/plain": [
+       "[-((ba - bs)*p + bs)/a, 0, 0]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M.eigenvalues()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<html><script type=\"math/tex; mode=display\">\\newcommand{\\Bold}[1]{\\mathbf{#1}}-\\frac{{\\left(\\mathit{ba} - \\mathit{bs}\\right)} p + \\mathit{bs}}{a}</script></html>"
+      ],
+      "text/plain": [
+       "-((ba - bs)*p + bs)/a"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "R0=M[0,0].simplify_full()\n",
+    "R0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Simulação:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def model(t, y, params):\n",
+    "    S, E, Is, Ia, R, D = y\n",
+    "    a, ba, bs, ca, cs, p, q = params\n",
+    "    return [\n",
+    "        -lamb * ((1 - chi) * S),  # dS/dt\n",
+    "        lamb * ((1 - chi) * S) - alpha * E,  # dE/dt\n",
+    "        (1 - p) * alpha * E - delta * I - phi * I,  # dI/dt\n",
+    "        p * alpha * E - gamma * A,\n",
+    "        phi * I - (rho + mu) * H,  # dH/dt\n",
+    "        delta * I + rho * H + gamma * A,  # dR/dt\n",
+    "        phi * I,  # (1-p)*alpha*E+ p*alpha*E # Hospit. acumuladas\n",
+    "        mu * H  # Morte acumuladas\n",
+    "    ]"
    ]
   }
  ],
